--- a/FeatureExtraction/featureExtraction.org
+++ b/FeatureExtraction/featureExtraction.org
@@ -610,21 +610,21 @@ imp.shape = (h,w,3)
 # Save image
 rt.write_data('../Data/kpca_university.tif',imp,GeoT,Proj)
 #+END_SRC
-**** PCA 1                                                         :BMCOL:
+**** KPCA 1                                                        :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.3
 :END:
 #+ATTR_LATEX: :width 0.75\linewidth :center
 [[file:./figures/university_kpc1.png]]
 
-**** PCA 2                                                         :BMCOL:
+**** KPCA 2                                                        :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.3
 :END:
 #+ATTR_LATEX: :width 0.75\linewidth :center
 [[file:./figures/university_kpc2.png]]
 
-**** PCA 3 :BMCOL:
+**** KPCA 3                                                        :BMCOL:
 :PROPERTIES:
 :BEAMER_col: 0.3
 :END:
@@ -632,6 +632,151 @@ rt.write_data('../Data/kpca_university.tif',imp,GeoT,Proj)
 [[file:./figures/university_kpc3.png]]
 
 ** Supervised
+*** Fisher's Discriminant Analysis
+- We observe some $\{\mathbf{x}_i,y_i\}_{i=1}^n$
+- Use the label information to find the linear features that highlight differences among classes
+
+  #+BEGIN_EXPORT latex 
+  \begin{center}
+    \begin{tikzpicture}
+      \begin{axis}[width=0.6\textwidth,grid,small,xmin=-5,xmax=5,ymin=-5,ymax=5]
+        \addplot[scatter, only marks,scatter src=explicit]table[col sep=comma,meta index=2,x index =0,y index=1] {figures/lda_data.csv};      
+        \addplot[domain=-5:5,very thick] {-x/0.52306077251960925*0.85229538790913895 - 3.65687201/3.04406312};
+      \end{axis}
+    \end{tikzpicture}
+  \end{center}
+  #+END_EXPORT
+- FDA: find $\mathbf{a}$ such as the ratio between the /between projected variance/ and the /sample projected variance/ is maximal
+*** FDA Algorithm
+- Between-class covariance matrix:
+  #+BEGIN_EXPORT latex
+  \begin{eqnarray*}
+    \mathbf{B} = \frac{1}{n}\sum_{c=1}^Cn_c(\boldsymbol{\mu}_c-\boldsymbol{\mu})(\boldsymbol{\mu}_c-\boldsymbol{\mu})^\top
+  \end{eqnarray*}
+  #+END_EXPORT
+- Sample covariance matrix
+  #+BEGIN_EXPORT latex
+   \begin{eqnarray*}
+     \boldsymbol{\Sigma} = \frac{1}{n-1}\sum_{i=1}^n(\mathbf{x}_i-\boldsymbol{\mu})(\mathbf{x}_i-\boldsymbol{\mu})^\top
+   \end{eqnarray*}
+   #+END_EXPORT
+- The Fisher discriminant subspace is given by the eigenvectors of $\boldsymbol{\Sigma}^{(-1)}\mathbf{B}$
+- Remark: there are at most $C-1$ eigenvectors because $\text{Rank}(\mathbf{B})\leq C-1$.
+*** FDA case study 1/3
+
+#+BEGIN_SRC python :tangle ../Codes/ldaPavia.py
+import rasterTools as rt
+import scipy as sp
+from sklearn.discriminant_analysis import LinearDiscriminantAnalysis
+
+# Load data set
+X,y=rt.get_samples_from_roi('../Data/university.tif','../Data/university_gt.tif')
+wave = sp.loadtxt('../Data/waves.csv',delimiter=',')
+
+# Select the same number of samples
+nt = 900
+xt,yt=[],[]
+for i in sp.unique(y):
+    t = sp.where(y==i)[0]
+    nc = t.size
+    rp =  sp.random.permutation(nc)
+    xt.extend(X[t[rp[0:nt]],:])
+    yt.extend(y[t[rp[0:nt]]])
+
+xt = sp.asarray(xt)
+yt = sp.asarray(yt)
+
+# Do LDA
+lda = LinearDiscriminantAnalysis(solver='eigen',shrinkage='auto')
+lda.fit(xt,yt.ravel())
+#+END_SRC
+#+BEGIN_SRC python :tangle ../Codes/ldaPavia.py :exports none
+# Plot explained variance
+l = lda.explained_variance_ratio_
+cl= l.cumsum()
+
+for i in range(y.max()-1):
+    print "({0},{1})".format(i+1,l[i])
+
+for i in range(y.max()-1):
+    print "({0},{1})".format(i+1,cl[i])
+
+# Projet data
+import matplotlib.pyplot as plt
+xp=lda.transform(xt)
+
+# Save projection
+D = sp.concatenate((xp[::10,:4],yt[::10]),axis=1)
+sp.savetxt("../FeatureExtraction/figures/lda_proj.csv",D,delimiter=',')
+
+# Save Eigenvectors
+D = sp.concatenate((wave[:,sp.newaxis],lda.coef_[:3,:].T),axis=1)
+sp.savetxt('../FeatureExtraction/figures/lda_pcs.csv',D,delimiter=',')
+#+END_SRC
+
+#+RESULTS:
+*** FDA case study 2/3
+- Projection on Fisher components
+  #+BEGIN_EXPORT latex
+  \begin{center}
+    \begin{tabular}{cc}
+   \begin{tikzpicture}
+        \begin{axis}[width=0.4\textwidth,height=0.3\textwidth,xticklabels={,,},yticklabels={,,},grid,xlabel=FC 1,ylabel=FC 2]
+          \addplot[scatter,only marks,scatter src=explicit,opacity=0.5] table[col sep =comma,meta index=4,x index=0,y index=1] {figures/lda_proj.csv};
+        \end{axis}
+      \end{tikzpicture}&
+                         \begin{tikzpicture}
+                           \begin{axis}[width=0.4\textwidth,height=0.3\textwidth,xticklabels={,,},yticklabels={,,},grid,,xlabel=FC 3,ylabel=FC 4]
+                             \addplot[scatter,only marks,scatter src=explicit,opacity=0.5] table[col sep =comma,meta index=4,x index=3,y index=2] {figures/lda_proj.csv};
+                           \end{axis}
+                         \end{tikzpicture}
+    \end{tabular}
+  \end{center}
+  #+END_EXPORT
+- Fisher components
+  #+BEGIN_EXPORT latex
+  \begin{center}
+    \begin{tikzpicture}
+      \begin{axis}[width=0.9\textwidth,height=0.3\textwidth,grid,xmin=400,xmax=900,cycle list name=color list]
+        \addplot+[thick] table[col sep=comma,x index=0,y index=1] {figures/lda_pcs.csv};
+        \addplot+[thick] table[col sep=comma,x index=0,y index=2] {figures/lda_pcs.csv};
+        \addplot+[thick] table[col sep=comma,x index=0,y index=3] {figures/lda_pcs.csv};
+        \legend{pc1,pc2,pc3};
+      \end{axis}
+    \end{tikzpicture}
+  \end{center}
+  #+END_EXPORT
+*** FDA case study 3/3
+#+BEGIN_SRC python :tangle ../Codes/ldaPavia.py
+im,GeoT,Proj = rt.open_data('../Data/university.tif')
+[h,w,b]=im.shape
+im.shape=(h*w,b)
+imp = lda.transform(im)[:,:3]
+imp.shape = (h,w,3)
+# Save image
+rt.write_data('../Data/lda_university.tif',imp,GeoT,Proj)
+#+END_SRC
+**** LDA 1                                                         :BMCOL:
+:PROPERTIES:
+:BEAMER_col: 0.3
+:END:
+#+ATTR_LATEX: :width 0.75\linewidth :center
+[[file:./figures/university_lda1.png]]
+
+**** LDA 2                                                         :BMCOL:
+:PROPERTIES:
+:BEAMER_col: 0.3
+:END:
+#+ATTR_LATEX: :width 0.75\linewidth :center
+[[file:./figures/university_lda2.png]]
+
+**** LDA 3                                                         :BMCOL:
+:PROPERTIES:
+:BEAMER_col: 0.3
+:END:
+#+ATTR_LATEX: :width 0.75\linewidth :center
+[[file:./figures/university_lda3.png]]
+
 
 * Spatial feature extaction
 
@@ -732,3 +877,26 @@ sp.savetxt("figures/kpca_datap.csv",sp.concatenate((Xp[:,:2],y[:,sp.newaxis]),ax
 (9,0.767653893262)
 (10,0.80191080235)
 #+end_example
+** FDA
+#+BEGIN_SRC python :results output
+from sklearn.datasets.samples_generator import make_classification
+import scipy as  sp
+from sklearn.discriminant_analysis import LinearDiscriminantAnalysis
+
+# Generate data
+x,y = make_classification(n_samples=200,n_classes=2,n_features=2,n_informative=2,n_redundant=0,n_clusters_per_class=1,random_state=1,class_sep=2)
+x-=x.mean(axis=0)
+# Save data
+D = sp.concatenate((x,y[:,sp.newaxis]),axis=1)
+sp.savetxt("figures/lda_data.csv",D,delimiter=',')
+# Apply LDA
+clf = LinearDiscriminantAnalysis(solver='eigen')
+clf.fit(x, y)
+print clf.coef_
+print clf.intercept_
+#+END_SRC
+
+#+RESULTS:
+: [[ 1.86816687 -3.04406312]]
+: [-0.08378251]
+
